--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Bed from '../layouts/Bed.astro';
-import Home from '../components/Pages/Home.astro';
 ---
 
-<Layout title='Home'></Layout>
+<Layout title='Login'></Layout>
 </head>
 <body>
-<Bed></Bed>
-<Home></Home>
 
 </body>
 </html>
