--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -20,7 +20,7 @@ import Layout from '../../layouts/Layout.astro';
             background-color: wheat; 
             z-index: 97;
             padding: 10px; 
-            color: white; 
+            color: rgb(0, 0, 0); 
             font-size: 16px; 
             width: 100%;
             height: 100%;
