--- a/src/components/menu/Card.astro
+++ b/src/components/menu/Card.astro
@@ -9,7 +9,7 @@ import Link from "./Link.astro";
       <label for="box" id="close"></label>
   </header>
   <nav id="navi">
-    <Link title="Home" link="" />
+    <Link title="Home" />
     <Link title="Ribbon" />
 
   </nav>
