--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -11,6 +11,7 @@ import Layout from '../../layouts/Layout.astro';
             position: relative;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
         
         span {
