--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Box from '../components/Pages/Login.astro'
+import Box from '../components/Pages/Login.astro';
 ---
 
 <Layout title='Login'></Layout>
