--- a/src/components/Pages/Login.astro
+++ b/src/components/Pages/Login.astro
@@ -1,29 +1,104 @@
 <body>
-
     <span>
-    <div id="Login">Login</div>
+        <div id="Login">
+            Login
+        </div>
+        <form>
+            <div class="login-form">
+                <div class="input-group">
+                    <label for="username"></label>
+                    <input placeholder="Saul Sanchez" type="text" id="username" name="username" required aria-required="true" class="input-text-large">
+                </div>
+                <div class="input-group password-container">
+                    <label for="password"></label>
+                    <input placeholder="Parlier1" type="password" id="password" name="password" required aria-required="true" class="input-text-large">
+                </div>            
+                <div class="input-group">
+                    <button type="submit">Login</button>
+                </div>
+            </div>
+        </form>
     </span>
+    <style>
+        button{
+            padding: 10px;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            background: linear-gradient(250deg, #105c69, #3c9d9e, #7db5b6, #c8dae5);
+            border-radius: 5px;
+            position: relative;
+            z-index: 1;
+            transition: background 3s ease;
+            border: 5px whitesmoke double;
+        }
+        button:hover{
+            background: linear-gradient(300deg, #105c69, #3c9d9e, #7db5b6, #c8dae5);
+        }
+        #Login {
+            position: relative;
+            font-size: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: start;
+            padding: 10px;
+            border-radius: 10px;
+            z-index: 99;
+            top: 0%;
+            width: 30%;
+        }
 
-<style>
+        span {
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: whitesmoke;
+            z-index: 99;
+            padding: 10px;
+            color: rgb(0, 0, 0);
+            width: 30%;
+            height: 80%;
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            border-radius: 5px;
+        }
 
-span {
-    border-radius: 10px;
-    position: absolute;
-    top: 10%; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    background-color: whitesmoke;
-    z-index: 99;
-    padding: 10px;
-    color: rgb(0, 0, 0);
-    width: 30%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+       .login-form {
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 5px;
+        }
 
-#Login{
-    font-size: 30px;
-</style>
+       .input-group {
+          display: flex;
+          flex-direction: column;
+          gap: 50px;
+        }
+        
+       .input-group input[type="text"],
+       .input-group input[type="password"] {
+          width: 100%;
+          height: 40px;
+          outline: none; /* Remove default focus border */
+        }
+
+       .input-text-large {
+            font-size: 24px;
+        }
+        /* Ensures the custom focus style is visible against the background */
+       .input-group input[type="text"],
+       .input-group input[type="password"] {
+          background-color: whitesmoke;
+          border: double;
+          border-top: none;
+          border-left: none;
+          border-right: none;
+        }
+    </style>
+
 </body>
+
+</html>
