--- a/src/components/Pages/Login.astro
+++ b/src/components/Pages/Login.astro
@@ -1,7 +1,12 @@
 <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@500&family=Sanchez:ital@0;1&display=swap" rel="stylesheet">
+
     <span>
-        <div id="Login">
+        <div id="Login" class="sanchez-regular">
             Login
+            <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:130%; position:absolute; width: 60px; height: 60px;">
         </div>
         <form>
             <div class="login-form">
@@ -21,7 +26,7 @@
     </span>
     <style>
         button{
-            padding: 10px;
+            padding: 15px;
             border: none;
             outline: none;
             cursor: pointer;
@@ -36,13 +41,13 @@
             background: linear-gradient(300deg, #105c69, #3c9d9e, #7db5b6, #c8dae5);
         }
         #Login {
+            padding: 10px;
             position: relative;
-            font-size: 30px;
+            font-size: 50px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: start;
-            padding: 10px;
             border-radius: 10px;
             z-index: 99;
             top: 0%;
@@ -62,7 +67,7 @@
             height: 80%;
             display: grid;
             justify-items: center;
-            align-items: center;
+            align-items: start;
             border-radius: 5px;
         }
 
@@ -97,6 +102,17 @@
           border-left: none;
           border-right: none;
         }
+        .sanchez-regular {
+            font-family: "Sanchez", serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+        .sanchez-regular-italic {
+        font-family: "Sanchez", serif;
+        font-weight: 400;
+        font-style: italic;
+        }
+
     </style>
 
 </body>
