--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Box from '../components/Pages/Login.astro';
 <Box></Box>
 <style>
 body {
-    background-image: url('https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/beach-ocean-waves-aerial-view-scenery-4k-wallpaper-uhdpaper.com-562%400%40i.jpg');
+    background-image: url('https://images.unsplash.com/photo-1511307172940-38ec278f7ce2?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-repeat: no-repeat;
     background-size: cover;
 }
