--- a/src/components/menu/Link.astro
+++ b/src/components/menu/Link.astro
@@ -18,7 +18,7 @@ const { title ,link = title} = Astro.props
 </script>
 
 <span>
-    <a href=`/${link}`> {title} </a>
+    <a href=`/Dashboard/${link}`> {title} </a>
 </span>
 
 
