--- a/src/components/menu/top.astro
+++ b/src/components/menu/top.astro
@@ -1,24 +1,27 @@
 <header>
-    
-  </header>
+    <span>Welcome Name</span>
+</header>
 
 <style>
+    span {
+        padding: 30px;
+        color: black;
+        font-size: 30px;
+    }
     header {
         background-color: whitesmoke;
         border-bottom: 5px double black;
         height: 100px;
-        top:0px;
+        top: 0px;
+        left: 300px;
         width: 100%;
         color: white;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
         z-index: 98;
-    }
-    header{
         position: fixed;
         overflow-x: hidden;
-        top: 0px;
-        Right: -2px;
     }
+
 </style>
