--- a/src/components/menu/top.astro
+++ b/src/components/menu/top.astro
@@ -1,5 +1,7 @@
 <header>
     <span>Welcome Name</span>
+    <span style="font-size: 20px;">NSP{0}</span>
+    <body>
 </header>
 
 <style>
@@ -19,7 +21,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        z-index: 98;
+        z-index: 99;
         position: fixed;
         overflow-x: hidden;
     }
