--- a/src/components/menu/Setting.astro
+++ b/src/components/menu/Setting.astro
@@ -1,5 +1,5 @@
     <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
+      <button class="dropbtn" style="font-weight: 100;font-size: 50px;">&#8801;</button>
       <div class="dropdown-content">
         <a href="#Password">New Password</a>
         <a href="#">Dark Mode</a>
@@ -9,18 +9,21 @@
 
     <style>
       .dropbtn {
+        display: flex;
+        height: 45px;
         background-color: whitesmoke;
         background-color: none;
         color: rgb(0, 0, 0);
         min-width: 118px;
         padding: 14px;
-        font-size: 16px;
         border: none;
+        align-items: center;
+        justify-content: center;
       }
   
       .dropdown {
         position: absolute;
-        right: 20%;
+        left: 73%;
       }
   
       .dropdown-content {
