--- a/src/components/menu/Setting.astro
+++ b/src/components/menu/Setting.astro
@@ -1,5 +1,6 @@
     <div class="dropdown">
-      <button class="dropbtn" style="font-weight: 100;font-size: 50px;">&#1000;</button> 
+      <button class="dropbtn" style="font-weight: 100;font-size: 40px;">&#9096;</button> 
+      <span style="color:black;">Setting</span>
       <div class="dropdown-content">
         <a href="#Password">New Password</a>
         <a href="#">Dark Mode</a>
@@ -8,6 +9,15 @@
     </div>
 
     <style>
+      span{
+        display: flex; 
+        background-color: whitesmoke;
+        background-color: none;
+        color: rgb(0, 0, 0);
+        border: none;
+        align-items: center;
+        justify-content: center;
+      }
       .dropbtn {
         display: flex; 
         height: 45px;
@@ -59,6 +69,9 @@
       .dropdown:hover .dropbtn {
         background-color: rgb(236, 236, 236);
         
+      }
+      .dropdown:hover span{
+        background-color: rgb(236, 236, 236);
       }
     </style>
   
