--- a/src/components/menu/Card.astro
+++ b/src/components/menu/Card.astro
@@ -4,8 +4,8 @@ import Link from "./Link.astro";
 ---
 <nav id="menus">
   <header>
-    <img style="width: 50px; margin-inline: 20px" src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg">
-      <h2 style="margin-inline: -5px;">Parlier</h2><h2 style="margin-inline: 10px;">NJROTC</h2>
+    <img style="width: 50px; margin-inline: 10px" src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg">
+      <h2 style="margin-inline: -3px;">NJROTC</h2><h2 style="margin-inline: 9px;">Dashboard</h2>
       <label for="box" id="close"></label>
   </header>
   <nav id="navi">
