--- a/src/components/Pages/Password.astro
+++ b/src/components/Pages/Password.astro
@@ -3,8 +3,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@500&family=Sanchez:ital@0;1&display=swap" rel="stylesheet">
 
     <span style="border: 10px rgb(0, 0, 0) double;">
-        <div id="Login" class="sanchez-regular">
-            Password
+        <div id="Login" class="sanchez-regular">Update Password
             <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:130%; position:absolute; width: 60px; height: 60px;">
         </div>
         <form action="/" method="post" onsubmit="return validateForm()">
@@ -44,15 +43,14 @@ button{
         #Login {
             padding: 10px;
             position: relative;
-            font-size: 30px;
+            font-size: 50px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: start;
-            border-radius: 10px;
+            justify-content: center;
             z-index: 99;
             top: 0%;
-            width: 30%;
+            width: 100%;
         }
 
         span {
