--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -1,30 +1,115 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 ---
+
 <Layout title='Ribbon'></Layout>
-<body>
-<span>Working</span>
-</body>
-
-<style>
-  body {
-            position: relative;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-        
-        span {
-            position: absolute; 
-            top: 100px;
-            left: 300px;
-            background-color: wheat; 
-            z-index: 90;
-            padding: 10px; 
-            color: rgb(0, 0, 0); 
-            font-size: 16px; 
-            width: 100%;
-            height: 100%;
-        }
-
-</style>
+<span id="contentSpan">
+  <div class="box">
+    <button id="Button">Open Ribbon Selector</button>
+    <input type="file" id="fileInput" accept=".jpg,.png,.jpeg" style="display:none;" onchange="previewImage(this)" />
+    <div class="custom-file-upload" onclick="document.getElementById('fileInput').click()">
+      <div class="image-preview"></div>
+    </div>
+  </div>
+</span>
+  
+  <script lang="JS">
+  function previewImage(inputElement) {
+      const file = inputElement.files[0];
+      if (!file ||!window.FileReader) return;
+  
+      if (/^image\/(jpg|jpeg|png)$/.test(file.type)) {
+          const reader = new FileReader();
+          reader.onloadend = function() {
+              const previewDiv = document.querySelector('.image-preview');
+              previewDiv.style.backgroundImage = `url(${reader.result})`;
+          };
+          reader.readAsDataURL(file);
+      }
+  }
+  </script>
+  
+  <style>
+  .custom-file-upload {
+      cursor: pointer;
+      background-color: darkblue;
+      border: 5px double #000000;
+      border-radius: 5px;
+      padding: 10px;
+      color: #495057;
+      font-size: 16px;
+      width: 100%;
+      text-align: center;
+      position: relative;
+      height: 150px;
+      background-image: url(https://icon-library.com/images/input-icon/input-icon-3.jpg);
+      background-position: center;
+      background-size: 25% 50%;
+      background-repeat: no-repeat;
+      z-index: 90; 
+  }
+  .image-preview {
+      min-width: 130%; 
+      min-height: 113.5%;
+      border-radius: 5px;
+      object-fit: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      margin-left: -54px; 
+      margin-top: -10px; 
+  }
+    #fileInput {
+      display: none;
+    }
+  
+    body {
+      position: relative;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+    }
+  
+    span {
+      position: absolute; 
+      top: 100px;
+      left: 300px;
+      background-color: wheat; 
+      z-index: 50;
+      padding: 10px; 
+      color: rgb(0, 0, 0); 
+      font-size: 16px; 
+      width: 100%;
+      height: 100%;
+    }
+  
+    .box {
+      display: flex;
+      justify-content: center; /* Aligns children horizontally in the center */
+      align-items: flex-end; /* Aligns children vertically at the bottom */
+      position: absolute;
+      right: 350px; /* Adjusted to place the box on the right */
+      background-color: whitesmoke;
+      z-index: 90;
+      padding: 10px;
+      color: rgb(0, 0, 0);
+      font-size: 16px;
+      width: 25%; /* Adjusted to fit content */
+      height: 75%; /* Adjusted to fit content */
+  }
+  #Button{
+    background-color: rgb(255, 255, 255);
+    border: 5px double #000000;
+    border-radius: 5px;
+    padding: 10px;
+    color: #495057;
+    font-size: 16px;
+    width: 95%;
+    text-align: center;
+    position: absolute;
+    height: 50px;
+    z-index: 90; 
+    top: 330px;
+  }
+  </style>
+  
