--- a/src/pages/Ribbon/index.astro
+++ b/src/pages/Ribbon/index.astro
@@ -5,11 +5,16 @@ import Home from '../../components/Pages/Ribbon.astro';
 ---
 
 <Layout title='Home'></Layout>
-</head>
 <Bed></Bed>
+</head>
 <body>
 
 <Home></Home>
 
 </body>
+<style>
+    Home{
+        z-index: 999;
+    }
+</style>
 </html>
