Made a different dashboard compotent

--- a/src/components/Pages/Login.astro
+++ b/src/components/Pages/Login.astro
@@ -8,7 +8,7 @@
             Login
             <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:130%; position:absolute; width: 60px; height: 60px;">
         </div>
-        <form>
+        <form action="" id="The-Login-Form">
             <div class="login-form">
                 <div class="input-group">
                     <label for="username"></label>
@@ -115,7 +115,22 @@
         }
 
     </style>
+    <!-- Dont touch, its the script that handles login -->
+    <script src="./Login.js"></script>
 
 </body>
 
 </html>
+<!--
+This is some werid way to write code
+You got a closing html tag in this file
+and a opening one in another,
+
+honestly I see this as werid but also genius,
+making sure to include it or else it won't run
+
+What ever floats your boat I guess
+
+- Joes
+
+-->
