--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -21,7 +21,7 @@ import Menu from '../ReQestMenu/Ribbon_Menu.astro';
     </div>
   </span>
 
-  <script lang="JS">
+  <script lang="js">
     function previewImage(inputElement) {
       const file = inputElement.files[0];
       if (!file ||!window.FileReader) return;
