--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -34,9 +34,10 @@ const { title } = Astro.props;
         </div>
     </header>
     <nav id="Dashboard-Navigation">
-        <a>Home</a>
-        <a>Ribbons</a>
+        <a href="/Home">Home</a>
+        <a href="/Ribbon">Ribbons</a>
         <a>More</a>
+        <a>Hmmm yes random error</a>
     </nav>
     <main id="Dashboard-Content">
         <slot></slot>
