--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -4,16 +4,13 @@
     --nav-txt-color:white;
 
     --header-height:105px;
-    --header-color:white;
+    --header-bg-color:whitesmoke;
     --header-border:5px double black;
 
     --main-content-color:wheat;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-}
+
 
 body{
     display: grid;
@@ -28,7 +25,12 @@ body{
     justify-items: stretch;
 
     width: 100vw;
+    max-width: 100vw;
     height: 100vh;
+    max-height: 100vh;
+
+    margin:0;
+    padding:0;
 }
 
 #Dashboard-Title{
@@ -50,6 +52,7 @@ body{
 }
 #Dashboard-Title h1{
     font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -62,6 +65,16 @@ body{
     align-items: center;
 
     border-bottom: var(--header-border);
+    background-color: var(--header-bg-color);
+}
+#Dashboard-Header h1{
+    font-weight: normal;
+    margin: 0;
+}
+#Dashboard-Header h3{
+    font-weight: normal;
+    color:grey;
+    margin: 0;
 }
 
 #Dashboard-Navigation{
@@ -79,11 +92,17 @@ body{
     align-items: center;
     justify-content: center;
 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+
     height: 50px;
     width: 100%;
     max-width: 100%;
 
     border-inline: 0px solid white;
+    color:white;
+    text-decoration: none;
+    text-align: center;
 
     transition: 250ms;
 
@@ -97,5 +116,10 @@ body{
 #Dashboard-Content{
     grid-area: main;
     background: var(--main-content-color);
+
+    padding: 10px;
+
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
