--- a/src/pages/Ribbon/index.astro
+++ b/src/pages/Ribbon/index.astro
@@ -4,7 +4,9 @@ import Bed from '../../layouts/Bed.astro';
 import Home from '../../components/Pages/Ribbon.astro';
 ---
 <Home></Home>
-<Layout title='Home'></Layout>
+<Layout title='Home'>
+    
+</Layout>
 <Bed></Bed>
 </head>
 <body>
