--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
-		<ViewTransitions />
+		<ViewTransitions fallback="animate"/>
 </head>
 <body>
     <div id="Dashboard-Title">
