--- a/src/components/ReQestMenu/Ribbon_Menu.astro
+++ b/src/components/ReQestMenu/Ribbon_Menu.astro
@@ -130,7 +130,7 @@
           box-shadow: 10px 20px 20px black;
         }
     </style>
-    <script lang="JS">
+    <script lang="js">
         document.addEventListener('DOMContentLoaded', function() {
             const menuItems = document.querySelectorAll('.menu-item');
             const clearSelectionBtn = document.getElementById('clearSelectionBtn');
