really astro? Reaaaaaaaaaally....

--- a/src/components/ReQestMenu/Ribbon_Menu.astro
+++ b/src/components/ReQestMenu/Ribbon_Menu.astro
@@ -1,3 +1,4 @@
+
 <span>
     <div class="menu-container">
         <div class="menu-item" data-index="1">
@@ -130,7 +131,7 @@
           box-shadow: 10px 20px 20px black;
         }
     </style>
-    <script lang="js">
+    <script is:inline lang="js">
         document.addEventListener('DOMContentLoaded', function() {
             const menuItems = document.querySelectorAll('.menu-item');
             const clearSelectionBtn = document.getElementById('clearSelectionBtn');
