--- a/src/components/ReQestMenu/Ribbon_Menu.astro
+++ b/src/components/ReQestMenu/Ribbon_Menu.astro
@@ -131,6 +131,7 @@
           box-shadow: 10px 20px 20px black;
         }
     </style>
+    <!-- 
     <script is:inline lang="js">
         document.addEventListener('DOMContentLoaded', function() {
             const menuItems = document.querySelectorAll('.menu-item');
@@ -172,4 +173,4 @@
             });
         });
         
-        </script>
+        </script>-->
