--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 //import List from '../ReQestMenu/RibbonList.astro';
-import Menu from '../ReQestMenu/RibbonMenu.astro';
+import Menu from '../RQestMenu/RibbonMenu.astro';
 ---
 
 <Layout title='Ribbon'></Layout>
