--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -10,7 +10,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
   </div>
   <span>
     <div class="content">
-      <!--<List></List> -->
+      <List></List>
       <div class="box">
         <button id="Button">Open Ribbon Selector</button>
         <input type="file" id="fileInput" accept=".jpg,.png,.jpeg" style="display:none;" onchange="previewImage(this)" />
