--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -5,14 +5,14 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
 ---
 
 <Layout title='Ribbon'></Layout>
-  <div class="astro-component">
+  <div class="astro-component" id="waaaaa">
     <Menu></Menu>
   </div>
   <span>
     <div class="content">
       <List></List>
       <div class="box">
-        <button id="Button">Open Ribbon Selector</button>
+        <button id="Buttonn">Open Ribbon Selector</button>
         <input type="file" id="fileInput" accept=".jpg,.png,.jpeg" style="display:none;" onchange="previewImage(this)" />
         <div class="custom-file-upload" onclick="document.getElementById('fileInput').click()">
           <div class="image-preview"></div>
@@ -21,7 +21,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
     </div>
   </span>
 
-  <script lang="js">
+  <script is:inline lang="js">
     function previewImage(inputElement) {
       const file = inputElement.files[0];
       if (!file ||!window.FileReader) return;
@@ -35,8 +35,13 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
         reader.readAsDataURL(file);
       }
     }
+    // it would get id="Button" not class=Button
+    console.log(document.getElementById('Button'))
 
-    document.getElementById('Button').addEventListener('mousedown', function() {
+    document.getElementById('Buttonn').onclick = ()=>{
+      //document.getElementById("waaaaa").style.display = "block"
+    }
+    document.getElementById('Buttonn').addEventListener("click", function() {
       const astroComponent = document.querySelector('.astro-component');
       astroComponent.style.display = 'block';
     });
@@ -95,7 +100,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       width: 100%;
       height: 100%;
     }
-    #Button:active {
+    #Buttonn:active {
       background-color: rgb(0, 0, 0);
       border: 5px double #ffffff;
       color: white;
@@ -114,7 +119,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       width: 25%;
       height: 75%;
     }
-    #Button {
+    #Buttonn {
       background-color: rgb(255, 255, 255);
       border: 5px double #000000;
       border-radius: 5px;
@@ -126,7 +131,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       position: absolute;
       height: 50px;
       z-index: 90;
-      top: 330px;
+      top: 0px;
     }
    .astro-component {
       position: relative;
