--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -1,5 +1,5 @@
 ---
-
+import { fade } from 'astro:transitions';
 import ViewTransitions from 'astro/components/ViewTransitions.astro';
 import "./Dashboard.css"
 interface Props {
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
 		<ViewTransitions fallback="animate"/>
+        
 </head>
 <body>
     <div id="Dashboard-Title">
@@ -39,7 +40,7 @@ const { title } = Astro.props;
         <a>More</a>
         <a>Hmmm yes random error</a>
     </nav>
-    <main id="Dashboard-Content">
+    <main id="Dashboard-Content" transition:animate={fade({ duration: '0.25s' })} >
         <slot></slot>
     </main>
 </body>
