--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -1,15 +1,10 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Bed from '../../layouts/Bed.astro';
+//import Layout from '../../layouts/Layout.astro';
+//import Bed from '../../layouts/Bed.astro';
 import Home from '../../components/Pages/Home.astro';
+import Dashboard from '../../layouts/Dashboard.astro';
 ---
+<Dashboard title="Home">
+    <Home></Home>
+</Dashboard>
 
-<Layout title='Home'></Layout>
-</head>
-<Bed></Bed>
-<body>
-
-<Home></Home>
-
-</body>
-</html>
