--- a/src/pages/Ribbon/index.astro
+++ b/src/pages/Ribbon/index.astro
@@ -1,22 +1,11 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Bed from '../../layouts/Bed.astro';
+//import Layout from '../../layouts/Layout.astro';
+//import Bed from '../../layouts/Bed.astro';
 import Home from '../../components/Pages/Ribbon.astro';
+import Dashboard from '../../layouts/Dashboard.astro';
 ---
-<Home></Home>
-<Layout title='Home'>
-    
-</Layout>
-<Bed></Bed>
-</head>
-<body>
-
-
-
-</body>
-<style>
-    Home{
-        z-index: 999;
-    }
-</style>
-</html>
+<Dashboard title="Ribbons">
+    <!-- I don't suggest you do this because it creates another unesseary file -->
+    <!-- But its not aginst the way astro works so its ok-->
+    <Home></Home>
+</Dashboard>
