--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -35,8 +35,8 @@ const { title } = Astro.props;
         </div>
     </header>
     <nav id="Dashboard-Navigation">
-        <a href="/Home">Home</a>
-        <a href="/Ribbon">Ribbons</a>
+        <a href="/Dashboard/Home">Home</a>
+        <a href="/Dashboard/Ribbon">Ribbons</a>
         <a>More</a>
         <a>Hmmm yes random error</a>
     </nav>
