--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -40,8 +40,11 @@ const { title } = Astro.props;
         <a>More</a>
         <a>Hmmm yes random error</a>
     </nav>
-    <main id="Dashboard-Content" transition:animate={fade({ duration: '0.25s' })} >
-        <slot></slot>
+    <main id="Dashboard-Content" >
+        <!-- This is just a wrapper for animation to work on seperate browers -->
+        <div transition:animate={fade({ duration: '0.25s' })}>
+            <slot ></slot>
+        </div>
     </main>
 </body>
 </html>
