--- a/src/components/Pages/Home.astro
+++ b/src/components/Pages/Home.astro
@@ -3,7 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 ---
 <Layout title='Home'></Layout>
 <body>
-<span>Test</span>
+Test
 </body>
 
 <style>
@@ -12,19 +12,6 @@ import Layout from '../../layouts/Layout.astro';
             height: 100vh;
             margin: 0;
             overflow: hidden;
-        }
-        
-        span {
-            position: absolute; 
-            top: 100px;
-            left: 300px;
-            background-color: wheat; 
-            z-index: 90;
-            padding: 10px; 
-            color: rgb(0, 0, 0); 
-            font-size: 16px; 
-            width: 100%;
-            height: 100%;
         }
 
 </style>
