--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -1,25 +1,21 @@
 ---
-import Layout from '../../layouts/Layout.astro';
 import List from '../ReQestMenu/Ribbon_List.astro';
-import Menu from '../ReQestMenu/RibbonMenu.astro';
+import Menu from '../ReQestMenu/ItemMenu.astro';
 ---
 
-<Layout title='Ribbon'></Layout>
   <div class="astro-component">
     <Menu></Menu>
   </div>
-  <span>
     <div class="content">
       <List></List>
       <div class="box">
-        <button id="Button">Open Ribbon Selector</button>
+        <button id="Buttonn">Open Ribbon Selector</button>
         <input type="file" id="fileInput" accept=".jpg,.png,.jpeg" style="display:none;" onchange="previewImage(this)" />
         <div class="custom-file-upload" onclick="document.getElementById('fileInput').click()">
           <div class="image-preview"></div>
         </div>
       </div>
     </div>
-  </span>
 
   <script lang="js">
     function previewImage(inputElement) {
@@ -36,9 +32,10 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       }
     }
 
-    document.getElementById('Button').addEventListener('mousedown', function() {
+    document.getElementById('Buttonn').addEventListener('mousedown', function() {
       const astroComponent = document.querySelector('.astro-component');
       astroComponent.style.display = 'block';
+      astroComponent.style.opacity = '1';
     });
   </script>
 
@@ -83,19 +80,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       margin: 0;
       overflow: hidden;
     }
-    span {
-      position: absolute;
-      top: 100px;
-      left: 300px;
-      background-color: wheat;
-      z-index: 50;
-      padding: 10px;
-      color: rgb(0, 0, 0);
-      font-size: 16px;
-      width: 100%;
-      height: 100%;
-    }
-    #Button:active {
+    #Buttonn:active {
       background-color: rgb(0, 0, 0);
       border: 5px double #ffffff;
       color: white;
@@ -105,7 +90,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       justify-content: center;
       align-items: flex-end;
       position: absolute;
-      right: 350px;
+      right: 50px;
       background-color: whitesmoke;
       z-index: 90;
       padding: 10px;
@@ -114,7 +99,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       width: 25%;
       height: 75%;
     }
-    #Button {
+    #Buttonn {
       background-color: rgb(255, 255, 255);
       border: 5px double #000000;
       border-radius: 5px;
@@ -128,10 +113,21 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       z-index: 90;
       top: 330px;
     }
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
    .astro-component {
+      animation: fadeIn 0.5s ease-in-out forwards;
       position: relative;
       display: none;
       z-index: 9999;
+      width: 100%;
       height: 100%;
     }
   </style>
