--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -1,4 +1,3 @@
-    <!--
 <span>
     <div class="menu-container">
         <div class="menu-item" data-index="1">
@@ -38,6 +37,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         overflow-y: scroll;
+        
     }
     
     .menu-item {
@@ -49,7 +49,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         border: 5px solid lightblue;
-        transition: ease 250ms;
+        transition: cubic-bezier(0.25, 0.1, 0, 1.4) 250ms;
     }
     
     .selected {
@@ -69,7 +69,7 @@
     }
     #selectionCount{
         position: absolute;
-        width: 90px;
+        width: 100px;
         height: 20px;
         right: 20%;
         top: 20%;
@@ -79,6 +79,14 @@
         justify-content: center;
         align-items: center;
         transition: ease 250ms;
+    }
+    @keyframes fadeOut {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
     }
     #Button{
         position: absolute;
@@ -93,6 +101,7 @@
         padding: 5px 2%;
         height: 40px;
         transition: ease 250ms;
+        
     }
     #Button:hover{
         background-color: whitesmoke;
@@ -104,7 +113,7 @@
         position: relative;
         background-color: rgb(255, 255, 255);
         top: 30%;
-        left: calc(93% - 40px);
+        left: calc(93% - 55px);
         
         border: solid 3px black;
         padding: 10px;
@@ -115,11 +124,12 @@
     }
     #clearSelectionBtn:active{
         background-color: navajowhite;
+        animation: fadeOut 0.5s ease-in-out forwards;
     }
     span {
           position: absolute; 
-          top: 50px;
-          left: 10%;
+          top: 0px;
+          left: 0%;
           background-color: wheat; 
           border: double 15px black;
           padding: 10px; 
@@ -173,4 +183,3 @@
         });
         
         </script>
--->
