--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -31,6 +31,8 @@ body{
 
     margin:0;
     padding:0;
+
+    font-family: 'Sanchez'
 }
 
 #Dashboard-Title{
@@ -52,7 +54,7 @@ body{
 }
 #Dashboard-Title h1{
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Sanchez','Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -84,7 +86,7 @@ body{
     background: var(--nav-bg-color);
     color: var(--nav-txt-color);
 }
-#Dashboard-Navigation a{
+#Dashboard-Navigation Link{
     box-sizing: border-box;
 
     display: flex;
@@ -92,7 +94,7 @@ body{
     align-items: center;
     justify-content: center;
 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Sanchez';
     font-size: 25px;
 
     height: 50px;
@@ -105,9 +107,14 @@ body{
     text-align: center;
 
     transition: 250ms;
+    transition:font  ;
 
 }
-#Dashboard-Navigation a:hover{
+#Dashboard-Navigation Link:hover{
+    transform: skewX(-20deg);
+}
+#Dashboard-Navigation Link:hover{
+    transform: skewX(0deg);
     border-inline: 5px solid white;
 }
 
@@ -122,4 +129,6 @@ body{
     overflow-x: hidden;
     overflow-y: scroll;
 }
-
+Link{
+    font-family: 'Sanchez'
+}
