--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -1,15 +1,9 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Bed from '../../layouts/Bed.astro';
+import Dashboard from "../../layouts/Dashboard.astro";
 import Home from '../../components/Pages/Home.astro';
 ---
 
-<Layout title='Home'></Layout>
-</head>
-<Bed></Bed>
-<body>
+<Dashboard title='Home'>
 
-<Home></Home>
-
-</body>
-</html>
+    <Home></Home>
+</Dashboard>
