--- a/src/pages/Ribbon/index.astro
+++ b/src/pages/Ribbon/index.astro
@@ -1,16 +1,11 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Bed from '../../layouts/Bed.astro';
+import Dashboard from "../../layouts/Dashboard.astro";
 import Home from '../../components/Pages/Ribbon.astro';
 ---
-<Home></Home>
-<Layout title='Home'>
-    
-</Layout>
-<Bed></Bed>
-</head>
-<body>
 
+<Dashboard title='Ribbon'>
+<Home></Home>
+</Dashboard>
 
 
 </body>
