--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -1,9 +1,15 @@
 ---
-import Dashboard from "../../layouts/Dashboard.astro";
+import Layout from '../../layouts/Layout.astro';
+import Bed from '../../layouts/Bed.astro';
 import Home from '../../components/Pages/Home.astro';
 ---
 
-<Dashboard title='Home'>
+<Layout title='Home'></Layout>
+</head>
+<Bed></Bed>
+<body>
 
-    <Home></Home>
-</Dashboard>
+<Home></Home>
+
+</body>
+</html>
