--- a/src/components/ReQestMenu/RibbonMenu.astro
+++ b/src/components/ReQestMenu/RibbonMenu.astro
@@ -1,3 +1,4 @@
+    <!--
 <span>
     <div class="menu-container">
         <div class="menu-item" data-index="1">
@@ -37,7 +38,6 @@
         flex-wrap: wrap;
         justify-content: space-between;
         overflow-y: scroll;
-        
     }
     
     .menu-item {
@@ -49,7 +49,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         border: 5px solid lightblue;
-        transition: cubic-bezier(0.25, 0.1, 0, 1.4) 250ms;
+        transition: ease 250ms;
     }
     
     .selected {
@@ -69,7 +69,7 @@
     }
     #selectionCount{
         position: absolute;
-        width: 100px;
+        width: 90px;
         height: 20px;
         right: 20%;
         top: 20%;
@@ -79,14 +79,6 @@
         justify-content: center;
         align-items: center;
         transition: ease 250ms;
-    }
-    @keyframes fadeOut {
-      0% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
-      }
     }
     #Button{
         position: absolute;
@@ -101,7 +93,6 @@
         padding: 5px 2%;
         height: 40px;
         transition: ease 250ms;
-        
     }
     #Button:hover{
         background-color: whitesmoke;
@@ -113,7 +104,7 @@
         position: relative;
         background-color: rgb(255, 255, 255);
         top: 30%;
-        left: calc(93% - 55px);
+        left: calc(93% - 40px);
         
         border: solid 3px black;
         padding: 10px;
@@ -124,12 +115,11 @@
     }
     #clearSelectionBtn:active{
         background-color: navajowhite;
-        animation: fadeOut 0.5s ease-in-out forwards;
     }
     span {
           position: absolute; 
-          top: 0px;
-          left: 0%;
+          top: 50px;
+          left: 10%;
           background-color: wheat; 
           border: double 15px black;
           padding: 10px; 
@@ -183,3 +173,4 @@
         });
         
         </script>
+-->
