--- a/src/components/menu/Link.astro
+++ b/src/components/menu/Link.astro
@@ -54,7 +54,7 @@ const { title ,link = title} = Astro.props
         margin: 0px;
         padding-right: 25px;
         font-size: 24px;
-        font-family: 'Sanchez';
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         
 
         color: white;
