--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -31,8 +31,6 @@ body{
 
     margin:0;
     padding:0;
-
-    font-family: 'Sanchez'
 }
 
 #Dashboard-Title{
@@ -54,7 +52,7 @@ body{
 }
 #Dashboard-Title h1{
     font-size: 20px;
-    font-family: 'Sanchez','Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -86,7 +84,7 @@ body{
     background: var(--nav-bg-color);
     color: var(--nav-txt-color);
 }
-#Dashboard-Navigation Link{
+#Dashboard-Navigation a{
     box-sizing: border-box;
 
     display: flex;
@@ -94,7 +92,7 @@ body{
     align-items: center;
     justify-content: center;
 
-    font-family: 'Sanchez';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
 
     height: 50px;
@@ -107,14 +105,9 @@ body{
     text-align: center;
 
     transition: 250ms;
-    transition:font  ;
 
 }
-#Dashboard-Navigation Link:hover{
-    transform: skewX(-20deg);
-}
-#Dashboard-Navigation Link:hover{
-    transform: skewX(0deg);
+#Dashboard-Navigation a:hover{
     border-inline: 5px solid white;
 }
 
@@ -131,6 +124,4 @@ body{
 
     z-index: -1;
 }
-Link{
-    font-family: 'Sanchez'
-}
+
