--- a/src/pages/Ribbon/index.astro
+++ b/src/pages/Ribbon/index.astro
@@ -1,12 +1,17 @@
 ---
-import Dashboard from "../../layouts/Dashboard.astro";
+import Layout from '../../layouts/Layout.astro';
+import Bed from '../../layouts/Bed.astro';
 import Home from '../../components/Pages/Ribbon.astro';
 import Dashboard from '../../layouts/Dashboard.astro';
 ---
-
-<Dashboard title='Ribbon'>
 <Home></Home>
-</Dashboard>
+<Layout title='Home'>
+    
+</Layout>
+<Bed></Bed>
+</head>
+<body>
+
 
 
 </body>
