did small thing

--- a/src/components/ReQestMenu/RibbonMenu.astro
+++ b/src/components/ReQestMenu/RibbonMenu.astro
@@ -1,5 +1,6 @@
 
 <span>
+    <!-- Make a javascript script to auto make these -->
     <div class="menu-container">
         <div class="menu-item" data-index="1">
             <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Ribbon/naval_science_i_outstanding_cadet_ribbon.png"
@@ -117,16 +118,16 @@
         background-color: navajowhite;
     }
     span {
-          position: absolute; 
-          top: 50px;
-          left: 10%;
-          background-color: wheat; 
-          border: double 15px black;
-          padding: 10px; 
-          color: rgb(0, 0, 0); 
-          font-size: 16px; 
-          width:80%;
-          height: 80%;
+            position: absolute; 
+            top: 50px;
+            left: 10%;
+            background-color: wheat; 
+            border: double 15px black;
+            padding: 10px; 
+            color: rgb(0, 0, 0); 
+            font-size: 16px; 
+            width:60vw;
+            height: 60vh;
     
           box-shadow: 10px 20px 20px black;
         }
