--- a/src/components/ReQestMenu/Ribbon_List.astro
+++ b/src/components/ReQestMenu/Ribbon_List.astro
@@ -3,7 +3,7 @@
     <div class="message-container"></div>
 </span>
 
-<script lang="JS">
+<script lang="js">
 document.addEventListener('DOMContentLoaded', function() {
     const menuItems = document.querySelectorAll('.menu-item');
     const messageContainer = document.querySelector('.message-container');
