--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -1,14 +1,11 @@
 ---
-import Layout from '../../layouts/Layout.astro';
 import List from '../ReQestMenu/Ribbon_List.astro';
-import Menu from '../ReQestMenu/RibbonMenu.astro';
+import Menu from '../ReQestMenu/ItemMenu.astro';
 ---
 
-<Layout title='Ribbon'></Layout>
-  <div class="astro-component" id="waaaaa">
+  <div class="astro-component">
     <Menu></Menu>
   </div>
-  <span>
     <div class="content">
       <List></List>
       <div class="box">
@@ -19,9 +16,8 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
         </div>
       </div>
     </div>
-  </span>
 
-  <script is:inline lang="js">
+  <script lang="js">
     function previewImage(inputElement) {
       const file = inputElement.files[0];
       if (!file ||!window.FileReader) return;
@@ -35,15 +31,11 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
         reader.readAsDataURL(file);
       }
     }
-    // it would get id="Button" not class=Button
-    console.log(document.getElementById('Button'))
 
-    document.getElementById('Buttonn').onclick = ()=>{
-      //document.getElementById("waaaaa").style.display = "block"
-    }
-    document.getElementById('Buttonn').addEventListener("click", function() {
+    document.getElementById('Buttonn').addEventListener('mousedown', function() {
       const astroComponent = document.querySelector('.astro-component');
       astroComponent.style.display = 'block';
+      astroComponent.style.opacity = '1';
     });
   </script>
 
@@ -88,18 +80,6 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       margin: 0;
       overflow: hidden;
     }
-    span {
-      position: absolute;
-      top: 100px;
-      left: 300px;
-      background-color: wheat;
-      z-index: 50;
-      padding: 10px;
-      color: rgb(0, 0, 0);
-      font-size: 16px;
-      width: 100%;
-      height: 100%;
-    }
     #Buttonn:active {
       background-color: rgb(0, 0, 0);
       border: 5px double #ffffff;
@@ -110,7 +90,7 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       justify-content: center;
       align-items: flex-end;
       position: absolute;
-      right: 350px;
+      right: 50px;
       background-color: whitesmoke;
       z-index: 90;
       padding: 10px;
@@ -131,12 +111,23 @@ import Menu from '../ReQestMenu/RibbonMenu.astro';
       position: absolute;
       height: 50px;
       z-index: 90;
-      top: 0px;
+      top: 330px;
     }
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
    .astro-component {
+      animation: fadeIn 0.5s ease-in-out forwards;
       position: relative;
       display: none;
       z-index: 9999;
+      width: 100%;
       height: 100%;
     }
   </style>
