--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -1,6 +1,4 @@
-
 <span>
-    <!-- Make a javascript script to auto make these -->
     <div class="menu-container">
         <div class="menu-item" data-index="1">
             <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Ribbon/naval_science_i_outstanding_cadet_ribbon.png"
@@ -39,6 +37,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         overflow-y: scroll;
+        
     }
     
     .menu-item {
@@ -50,7 +49,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         border: 5px solid lightblue;
-        transition: ease 250ms;
+        transition: cubic-bezier(0.25, 0.1, 0, 1.4) 250ms;
     }
     
     .selected {
@@ -70,7 +69,7 @@
     }
     #selectionCount{
         position: absolute;
-        width: 90px;
+        width: 100px;
         height: 20px;
         right: 20%;
         top: 20%;
@@ -80,6 +79,14 @@
         justify-content: center;
         align-items: center;
         transition: ease 250ms;
+    }
+    @keyframes fadeOut {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
     }
     #Button{
         position: absolute;
@@ -94,6 +101,7 @@
         padding: 5px 2%;
         height: 40px;
         transition: ease 250ms;
+        
     }
     #Button:hover{
         background-color: whitesmoke;
@@ -105,7 +113,7 @@
         position: relative;
         background-color: rgb(255, 255, 255);
         top: 30%;
-        left: calc(93% - 40px);
+        left: calc(93% - 55px);
         
         border: solid 3px black;
         padding: 10px;
@@ -116,18 +124,19 @@
     }
     #clearSelectionBtn:active{
         background-color: navajowhite;
+        animation: fadeOut 0.5s ease-in-out forwards;
     }
     span {
-            position: absolute; 
-            top: 50px;
-            left: 10%;
-            background-color: wheat; 
-            border: double 15px black;
-            padding: 10px; 
-            color: rgb(0, 0, 0); 
-            font-size: 16px; 
-            width:60vw;
-            height: 60vh;
+          position: absolute; 
+          top: 0px;
+          left: 0%;
+          background-color: wheat; 
+          border: double 15px black;
+          padding: 10px; 
+          color: rgb(0, 0, 0); 
+          font-size: 16px; 
+          width:80%;
+          height: 80%;
     
           box-shadow: 10px 20px 20px black;
         }
@@ -174,4 +183,3 @@
         });
         
         </script>
-
