--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -1,5 +1,6 @@
 ---
-import { fade } from 'astro:transitions';
+import Link from "../components/menu/Link.astro";
+import Setting from '../components/menu/Setting.astro';
 import ViewTransitions from 'astro/components/ViewTransitions.astro';
 import "./Dashboard.css"
 interface Props {
@@ -17,11 +18,13 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sanchez:ital@0;1&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
 		<ViewTransitions fallback="animate"/>
-        
 </head>
 <body>
     <div id="Dashboard-Title">
@@ -30,21 +33,17 @@ const { title } = Astro.props;
     </div>
     <header id="Dashboard-Header">
         <div id="User-Info">
-            <h1> Cadet <span id="User-Rank">Seaman</span> <span id="User-Name">Doe</span></h1>
-            <h3>NS<span id="Class-Name">4294967296 32-bit integer limit</span></h3>
+            <h1> Cadet <span id="User-Rank">Seaman Recruit</span> <span id="User-Name">Sanchez</span></h1>
+            <h3>NS<span id="Class-Name">0</span></h3>
         </div>
     </header>
     <nav id="Dashboard-Navigation">
-        <a href="/Dashboard/Home">Home</a>
-        <a href="/Dashboard/Ribbon">Ribbons</a>
-        <a>More</a>
-        <a>Hmmm yes random error</a>
+        <Link title="Home">Home</Link>
+        <Link title="Ribbon">Ribbons</Link>
     </nav>
-    <main id="Dashboard-Content" >
-        <!-- This is just a wrapper for animation to work on seperate browers -->
-        <div transition:animate={fade({ duration: '0.25s' })}>
-            <slot ></slot>
-        </div>
+    <main id="Dashboard-Content">
+        <slot></slot>
     </main>
+    <Setting></Setting>
 </body>
 </html>
