--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -1,10 +1,9 @@
 ---
-//import Layout from '../../layouts/Layout.astro';
-//import Bed from '../../layouts/Bed.astro';
+import Dashboard from "../../layouts/Dashboard.astro";
 import Home from '../../components/Pages/Home.astro';
-import Dashboard from '../../layouts/Dashboard.astro';
 ---
-<Dashboard title="Home">
+
+<Dashboard title='Home'>
+
     <Home></Home>
 </Dashboard>
-
