--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -145,7 +145,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             const menuItems = document.querySelectorAll('.menu-item');
             const clearSelectionBtn = document.getElementById('clearSelectionBtn');
-            const selectionCount = document.getElementById('selectionCount'); // Reference to the count element
+            const selectionCount = document.getElementById('selectionCount'); 
             let selectedCount = 0; 
         
             menuItems.forEach(item => {
