--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -54,7 +54,7 @@ body{
 }
 #Dashboard-Title h1{
     font-size: 20px;
-    font-family: 'Sanchez','Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans MT','Gill Sans', 'Trebuchet MS', sans-serif;
 }
 
 
